style：优化命名规则